--- a/templates/step/step_view.html
+++ b/templates/step/step_view.html
@@ -9,17 +9,22 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 {% block content %}
+    <div class="p-2">
     <div class="row">
         <div class="col-10">
             <p class="fs-1">Premières poules</p>
         </div>
         <div class="col-2 d-flex justify-content-center align-items-center">
-            <a class="btn btn-primary">Passer aux deuxièmes poules</a>
+            {% if step.is_done %}
+            	<a class="btn btn-primary">Passer aux deuxièmes poules</a>
+                {% else %}
+                <a class="btn btn-primary disabled">Passer aux deuxièmes poules</a>
+            {% endif %} 
         </div>
     </div>
-    <div class="row d-flex justify-content-around p-2">
-        {% for pool in first_step.pool_set.all %}
-            <div class="card mx-2" style="min-width:600px; max-width: 600px">
+    <div class="row d-flex justify-content-around gap-3">
+        {% for pool in step.pool_set.all %}
+            <div class="card" style="min-width:600px; max-width: 600px">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-9">
@@ -27,7 +32,7 @@
                         </div>
                         <div class="col-3">
                             {% if pool.is_done %}
-                                <a class="btn btn-primary" style="font-size: 0.8em">Valider la poule</a>
+                                <a class="btn btn-primary" href="{% url "validate_pool" step.pk pool.pk %}" style="font-size: 0.8em">Valider la poule</a>
                             {% else %}
                                 <a class="btn btn-primary disabled" style="font-size: 0.8em">Valider la poule</a>
                             {% endif %}
@@ -81,5 +86,6 @@
                 </div>
             </div>
         {% endfor %}
+    </div>
     </div>
 {% endblock %}
