--- a/templates/step/second_steps.html
+++ b/templates/step/second_steps.html
@@ -1,4 +1,3 @@
-<!-- tournament_view.html -->
 {% extends "base/base.html" %}
 {% load bootstrap5 %}
 
@@ -9,24 +8,22 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 {% block content %}
-    <div class="p-2">
-        <div class="row">
-            <div class="col-10">
-                <p class="fs-1">Premières poules</p>
-            </div>
-            <div class="col-2 d-flex justify-content-center align-items-center">
-                {% if step.is_done %}
-                    {% if step.step_set|length == 0 %}
-                        <a class="btn btn-primary" href="{% url 'create_second_step' step.pk %}">Créer les deuxièmes
-                            poules</a>
-                    {% else %}
-                        <a class="btn btn-primary" href="{% url 'second_steps' step.tournament.pk %}">Passer aux deuxièmes
-                            poules</a>
-                    {% endif %}
-                {% else %}
-                    <a class="btn btn-primary disabled">Passer aux deuxièmes poules</a>
-                {% endif %}
-            </div>
+    <div class="row">
+        <div class="col-10">
+            <p class="fs-1">Seconde phase</p>
+        </div>
+        <div class="col-2 d-flex justify-content-center align-items-center">
+            {% if step.is_done %}
+                <a class="btn btn-primary" href="{% url 'create_second_step' step.pk %}">Passer au tableau final</a>
+            {% else %}
+                <a class="btn btn-primary disabled">Passer au tableau final</a>
+            {% endif %}
+        </div>
+    </div>
+    {% for step in steps %}
+        <hr>
+        <div>
+        Poules des rangs {{ step.rank }}
         </div>
         <div class="row d-flex justify-content-around gap-3">
             {% for pool in step.pools.all %}
@@ -103,5 +100,5 @@
                 </div>
             {% endfor %}
         </div>
-    </div>
+    {% endfor %}
 {% endblock %}
