second phase creation

--- a/templates/step/second_steps.html
+++ b/templates/step/second_steps.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row d-flex justify-content-around gap-3">
             {% for pool in step.pools.all %}
-                <div class="card" style="min-width:600px; max-width: 600px">
+                <div class="card" style="min-width:650px; max-width: 650px">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-9">
@@ -57,12 +57,12 @@
                                 </div>
                             {% endfor %}
                         </div>
-                        <table class="table" style="font-size: 0.7em">
+                        <table class="table table-striped" style="font-size: 0.7em">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Joueur 1</th>
-                                <th scope="col">Joueur 2</th>
+                                <th style="width: 100px" scope="col">Joueur 1</th>
+                                <th style="width: 100px" scope="col">Joueur 2</th>
                                 <th scope="col">Sets</th>
                             </tr>
                             </thead>
