--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,7 +1,8 @@
 {% load bootstrap5 %}
+{% load static %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-{% bootstrap_messages %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
