--- a/templates/step/step_view.html
+++ b/templates/step/step_view.html
@@ -34,7 +34,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-9">
-                                <p class="fs-3">Poule {{ forloop.counter }}</p>
+                                <p class="fs-3">Poule {{ forloop.counter }} : id {{ pool.pk }}</p>
                             </div>
                             <div class="col-3">
                                 {% if pool.is_done %}
