--- a/templates/tournament/tournament_detail.html
+++ b/templates/tournament/tournament_detail.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="col">
-                <h2 class="text-center">Joueurs inscrits</h2>
+                <h2 class="text-center">Joueurs inscrits: {{ tournament.players.count }}</h2>
                 <ul class="mx-auto">
                     {% for player in players %}
                         <div class="mb-2">
