pushing to fix on PC

--- a/templates/step/final_steps.html
+++ b/templates/step/final_steps.html
@@ -53,7 +53,7 @@
                                             <div class="row">
                                                 <div class="col-8">
                                                     Joueur {{ forloop.counter }}: {{ player.player.last_name }} {{ player.player.first_name }}
-                                                    ({{ player.player.points }} points)
+                                                    ({{ player.player.points }} points) id {{ player.pk }}
                                                 </div>
                                                 {% if pool.validated %}
                                                     <div class="col-4">
