--- a/templates/step/second_steps.html
+++ b/templates/step/second_steps.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load custom_filters %}
 {% load bootstrap5 %}
 
 {# Load CSS and JavaScript #}
@@ -26,7 +27,7 @@
             {% endif %}
         </div>
     </div>
-    {% for step in steps %}
+    {% for step in steps|dictsort:"rank" %}
         <hr>
         <div>
             Poules des rangs {{ step.rank }}
@@ -53,7 +54,7 @@
                                 <div class="row">
                                     <div class="col-8">
                                         Joueur {{ forloop.counter }}: {{ player.player.last_name }} {{ player.player.first_name }}
-                                        ({{ player.player.points }} points)
+                                        ({{ player.player.points }} points) id {{ player.pk }}
                                     </div>
                                     {% if pool.validated %}
                                         <div class="col-4">
