--- a/templates/step/step_view.html
+++ b/templates/step/step_view.html
@@ -11,15 +11,28 @@
 {% block content %}
     <div class="p-2">
         <div class="row">
-            <div class="col-10">
+            <div class="col-8">
                 <p class="fs-1">Premières poules</p>
             </div>
-            <div class="col-2 d-flex justify-content-center align-items-center gap-2">
+            <div class="col-4 d-flex justify-content-center align-items-center gap-2">
                  <a class="btn btn-primary" href="{% url 'step_pdf' step.pk 1 %}" target="_blank">Imprimer les poules</a>
                 {% if step.is_done %}
                     {% if step.step_set.all|length == 0 %}
-                        <a class="btn btn-primary" href="{% url 'create_second_step' step.pk %}">Créer les deuxièmes
-                            poules</a>
+                        <form class="row" method="post" action="{% url 'create_second_step' step.pk %}">
+                            {% csrf_token %}
+                            <div class="col">
+                                <label for="set_number">
+                                    Nombre de sets
+                                </label>
+                                <select class="form-select" id="set_number" name="set_number">
+                                    <option value="3">3</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary">Créer les deuxièmes poules</button>
+                            </div>
+                        </form>
                     {% else %}
                         <a class="btn btn-primary" href="{% url 'second_steps' step.tournament.pk %}">Passer aux deuxièmes
                             poules</a>
